<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="profile"
            type="com.ps.omarmattr.abohesham.client.model.Profile" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnCancel"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="top|start"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="@drawable/shape_circle"
            android:padding="@dimen/margin_16"
            android:src="@drawable/ic_baseline_close"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:tint="@color/header" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_32"
            android:fontFamily="@font/tajawal_bold"
            android:text="@string/app_name"
            android:textColor="@color/header"
            android:textSize="@dimen/font_18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:fontFamily="@font/tajawal_medium"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="@dimen/font_18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8"
            android:fontFamily="@font/tajawal_medium"
            android:text="@{profile.location}"
            android:textColor="@color/header"
            android:textSize="@dimen/font_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginVertical="@dimen/margin_16"
            android:fontFamily="@font/tajawal_medium"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="@dimen/font_18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8"
            android:layout_marginVertical="@dimen/margin_16"
            android:fontFamily="@font/tajawal_medium"
            android:text="@{profile.phone}"
            android:textColor="@color/header"
            android:textSize="@dimen/font_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDone"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_56dp"
            android:layout_margin="@dimen/margin_16"
            android:text="@string/done"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>