<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="com.ps.omarmattr.abohesham.client.model.Product" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                loadImage="@{product.image[0]}"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/tajawal_medium"
                android:text="@{product.name}"
                android:textColor="@color/header"
                android:textSize="16sp"
                tools:text="@string/product_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawablePadding="@dimen/margin_8"
                android:fontFamily="@font/tajawal_medium"
                android:text="@{String.valueOf(product.price)}"
                android:textColor="@color/header"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/done"
                app:drawableStartCompat="@drawable/ic_sheke"
                app:layout_constraintStart_toEndOf="@+id/oldPrice"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/oldPrice"
                paintFlags="@{String.valueOf(product.oldPrice)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawablePadding="@dimen/margin_8"
                android:fontFamily="@font/tajawal_medium"
                android:textColor="@color/header"
                tools:text="@string/done"
                android:textSize="14sp"
                android:typeface="sans"
                app:drawableStartCompat="@drawable/ic_sheke"
                app:layout_constraintBottom_toBottomOf="@+id/price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/price" />

            <TextView
                android:id="@+id/txtQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/tajawal_medium"
                android:text="@{String.valueOf(product.quantity)}"
                android:textColor="@color/header"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price"
                tools:text="@string/quantity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/tajawal_medium"
                android:text="@string/sold"
                android:textColor="@color/header"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtQuantity"
                app:layout_constraintTop_toBottomOf="@+id/price"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
