<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/ic_toolbar_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="38dp"
                android:fontFamily="@font/tajawal_bold"
                android:gravity="start"
                android:text="@string/welcome"
                android:textAlignment="viewStart"
                android:textDirection="locale"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:fontFamily="@font/tajawal_medium"
            android:text="@string/name"
            android:textColor="@color/header"
            android:textSize="@dimen/font_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_56dp"
            android:layout_marginTop="@dimen/margin_8"
            android:textColorHint="@color/header"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:boxStrokeColor="@color/yellow"
            app:hintEnabled="false"
            app:hintTextColor="@color/header"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/header"
                android:textColorHint="@color/header"
                android:textCursorDrawable="@drawable/shape_cursor" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:fontFamily="@font/tajawal_medium"
            android:text="@string/phone"
            android:textColor="@color/header"
            android:textSize="@dimen/font_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_56dp"
            android:textColorHint="@color/header"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:boxStrokeColor="@color/yellow"
            app:hintEnabled="false"
            app:hintTextColor="@color/header"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLines="1"
                android:textAlignment="viewStart"
                android:textColor="@color/header"
                android:textColorHint="@color/header"
                android:textCursorDrawable="@drawable/shape_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:fontFamily="@font/tajawal_medium"
            android:text="@string/do_you_have_network"
            android:textColor="@color/header"
            android:textSize="@dimen/font_18"
            app:layout_constraintEnd_toStartOf="@+id/checkBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:fontFamily="@font/tajawal_medium"
            android:text="@string/name_network"
            android:textColor="@color/header"
            android:textSize="@dimen/font_18"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtNameNet"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_56dp"
            android:textColorHint="@color/header"
            android:visibility="gone"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:boxStrokeColor="@color/yellow"
            app:hintEnabled="false"
            app:hintTextColor="@color/header"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name_network"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/header"
                android:textColorHint="@color/header"
                android:textCursorDrawable="@drawable/shape_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_56dp"
            android:layout_margin="@dimen/margin_16"
            android:text="@string/login"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <!--        <com.facebook.login.widget.LoginButton-->
        <!--            android:id="@+id/login_button"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center_horizontal"-->
        <!--            app:layout_constraintBottom_toTopOf="@+id/btnSignUp"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/textView3" />-->


        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/blue_100"
            android:text="Login With Facebook"
            android:textAllCaps="false"
            app:icon="@drawable/ic_baseline_facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>